Fix icon-btn size on safari browser

--- a/src/main.css
+++ b/src/main.css
@@ -33,6 +33,7 @@ button.cancel:hover {
 .button.icon-btn,
 button.icon-btn {
     min-width: 40px;
+    width: 40px;
     height: 40px;
     padding: 5px;
     background: none;
